fix: footer overflow in download (#14)

--- a/css/index.css
+++ b/css/index.css
@@ -39,11 +39,15 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: var(--background);
   color: var(--text);
   font-family: suit-medium;
   margin: 0;
   border: 0;
+  min-height: 100vh;
 }
 
 .flexWrapper {
@@ -52,7 +56,6 @@ body {
   align-items: center;
   justify-content: flex-start;
   gap: 3vh;
-  min-height: 100vh;
 }
 
 .title {
